# OOP_BMSTU

./: .gitignore  Lab_03.drawio  Lab_03_old.drawio
Lab_03/: CMakeLists.txt  mainwindow.ui
Lab_03/UML-table/: .$Lab_03.drawio.bkp
Lab_03/examples/: cube.txt  pyramid.csv
Lab_03/inc/: mainwindow.h
Lab_03/inc/ApplicationService/: SceneApplicationService.h
Lab_03/inc/Dependencies/: FacadeDependencies.h  LoadDependencies.h  SceneDependencies.h
Lab_03/inc/commands/: BaseCommand.h  CameraCommands.h  DrawCommands.h  LoadCommands.h  ModelCommands.h  SceneCommands.h
Lab_03/inc/facade/: SceneFacade.h
Lab_03/inc/load/: BaseBuilder.h  BaseBuilderCreator.h  BaseDirector.h  BaseDirectorCreator.h  BaseReader.h  BaseReaderCreator.h  BoneModelBuilder.h  BoneModelDirector.h  BoneModelReader.h  ConcreteBuilderCreator.h  ConcreteDirectorCreator.h  ConcreteReaderCreator.h  CreatorConcepts.h  CsvModelReader.h  DirectorSolution.h  ListModelBuilder.h  ModelData.h  ReaderSolution.h  TxtModelReader.h
Lab_03/inc/managers/: DrawerService.h  LoadService.h  SceneManager.h  TransformService.h
Lab_03/inc/math/: Vector3D.h
Lab_03/inc/render/: BaseDrawer.h  BaseRenderFactory.h  BaseRenderSurface.h  QtDrawer.h  QtRenderFactory.h  QtRenderSurface.h  RenderVisitor.h  Visitor.h
Lab_03/inc/scene/: AbstractObject.h  BaseBoneModel.h  BaseModel.h  Camera.h  Composite.h  Edge.h  Face.h  ListModelStructure.h  ModelStructure.h  Point.h  Scene.h  TransformableObject.h
Lab_03/inc/transform/: MoveVisitor.h  RotateVisitor.h  ScaleVisitor.h  (+1 more)
Lab_03/src/: main.cpp  mainwindow.cpp
(+41 files in other folders)
